Fixed mobile view

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timezone Comparison Tool</title>
   <!-- Connect to your CSS file -->
+   google-site-verification: google819272acad107223.html
   <link rel="stylesheet" href="style.css">
   <!-- Add Choices.js library for searchable dropdowns -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
