mobie view fixed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timezone Comparison Tool</title>
   <!-- Connect to your CSS file -->
-   google-site-verification: google819272acad107223.html
+   <meta name="google-site-verification" content="Hrb1my9iSwSf2bgxr2SojeSN4ye2zx-z9bq7Tf0Jb-c" />
   <link rel="stylesheet" href="style.css">
   <!-- Add Choices.js library for searchable dropdowns -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
